feat: add transaction API
